# banao-assessment

./: .gitignore  README.md  handler.py  makefile  package.json  pyproject.toml  pyrefly.toml  serverless.yml
api/: urls.py
main/: settings.py  urls.py
scheduling/: admin.py  models.py  serializers.py  urls.py  views.py
scheduling/migrations/: 0001_initial.py
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_google_access_token_user_google_client_id_and_more.py
